# test_case

./: .dev.env.example  .prod.env.example  Makefile  pyproject.toml
app/: alembic.ini
app/application/: lifespan.py  main.py
app/core/settings/: __init__.py  base.py  dev.py  prod.py
app/di/: __init__.py  container.py
app/di/providers/: __init__.py  core.py  infra.py  mappers.py
app/domain/: exceptions.py
app/domain/entities/: __init__.py  base.py  text.py
app/domain/exceptions/: __init__.py
app/domain/infra/: cache.py
app/domain/logic/: __init__.py  services.py  use_cases.py
app/domain/mappers/: __init__.py  entities.py  values.py
app/domain/values/: __init__.py  base.py  exceptions.py  text.py
app/infra/metrics/: custom_metrics.py  fabrics.py  prometheus_app.py  proxies.py
app/infra/monitoring/: fabrics.py  proxies.py  traces_exporter.py
app/infra/redis/: __init__.py  exceptions.py  keys.py  manager.py
app/infra/taskiq/: app.py  middlewares.py  task_app.py  tasks.py
app/logic/services/: __init__.py  add_text.py  add_texts.py  create_text.py
docker_compose/: app.yaml  infra.yaml  monitoring.yaml
docker_compose/cache/redis/: redis-slave.conf
docker_compose/db/master-init/: pg_hba.conf
docker_compose/db/pgbouncer/: pgbouncer.ini  userlist.txt
docker_compose/db/slave-init/: pg_hba.conf
docker_compose/master-init/: init-replication.sql  pg_hba.conf
docker_compose/monitoring/otel/: otel-config.yaml
docker_compose/monitoring/prometheus/: prometheus.yaml
docker_compose/pgbouncer/: pgbouncer.ini  userlist.txt
(+53 files in other folders)
