[project]
name = "test-case"
version = "0.1.0"
description = ""
authors = [
    {name = "fedor",email = "fedorlastv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "redis (>=5,<6)",
    "dishka (>=1.6.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "taskiq (>=0.11.17,<0.12.0)",
    "taskiq-aio-pika (>=0.4.2,<0.5.0)",
    "taskiq-redis (>=1.0.8,<2.0.0)",
    "taskiq-fastapi (>=0.3.5,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
